 #
 CMAKE_MINIMUM_REQUIRED (VERSION 2.8.3)
 PROJECT (mdp-solver)
 SET (APPLICATION_NAME "MDP Solver")
 SET (APPLICATION_CODENAME "${PROJECT_NAME}")
 SET (APPLICATION_VENDOR_ID "com.tudelft.groupd.mdp")
 SET (APPLICATION_VENDOR_NAME "Group D")
 SET (APPLICATION_ID "${APPLICATION_VENDOR_ID}.${PROJECT_NAME}")
 
 #
 # Project Output Paths
 #
 SET (MAINFOLDER ${PROJECT_SOURCE_DIR})
 SET (EXECUTABLE_OUTPUT_PATH "${MAINFOLDER}/bin")
 SET (LIBRARY_OUTPUT_PATH "${MAINFOLDER}/lib")
 SET (APPLICATION_VERSION_MAJOR 1)
 SET (APPLICATION_VERSION_MINOR 0)
 SET (APPLICATION_VERSION_PATCH 0)
 SET (APPLICATION_VERSION_TYPE SNAPSHOT)
 SET (APPLICATION_VERSION_STRING "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}-${APPLICATION_VERSION_TYPE}")
 
 #
 # Project Search Paths
 #
 INCLUDE_DIRECTORIES (${MAINFOLDER}/include)
 
 #
 # Project Prerequisites
 #
FIND_LIBRARY (MADP MADP PATHS ext/)
SET (MADP_LIBS ${MADP})

#
# Retrieve the source files
#
FILE (GLOB_RECURSE project_SRCS src/*.cpp src/*.c)
FILE (GLOB_RECURSE project_HDRS include/*.hpp include/*.h)
SET (project_BIN ${PROJECT_NAME})

# Create the executable
ADD_EXECUTABLE(${project_BIN} ${project_SRCS} ${project_HDRS})

# Declare the libraries to use
TARGET_LINK_LIBRARIES (${project_BIN} ${MADP_LIBS})
SET_TARGET_PROPERTIES(${project_BIN} PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${project_BIN} CLEAN_DIRECT_OUTPUT 1)